{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 44,
  "lineage": "9919f563-2af3-d19a-27da-d42e7351a0a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0080e4c5bc078760e",
            "arn": "arn:aws:ec2:us-east-1:952790931786:instance/i-0626fbe575445d867",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0626fbe575445d867",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d57a0759c2455359",
            "private_dns": "ip-192-168-5-225.ec2.internal",
            "private_ip": "192.168.5.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060f3c05d217771e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae1ef9f266c79879",
            "tags": {
              "Name": "Jenkins Machine"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b4213ffd2d2d9236"
            ]
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_subnet.private_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:internet-gateway/igw-09ac7b9c093e4a32d",
            "id": "igw-09ac7b9c093e4a32d",
            "owner_id": "952790931786",
            "tags": {
              "Name": "Terraform IGW"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952790931786:loadbalancer/app/ALB/a01a96975db52e4c",
            "arn_suffix": "app/ALB/a01a96975db52e4c",
            "dns_name": "ALB-1119712016.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:952790931786:loadbalancer/app/ALB/a01a96975db52e4c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-0fb36f79db7a3a52d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0acfcbaafadac550f"
              },
              {
                "subnet_id": "subnet-0da48ac49bae5f0c6"
              }
            ],
            "subnets": [
              "subnet-0acfcbaafadac550f",
              "subnet-0da48ac49bae5f0c6"
            ],
            "tags": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952790931786:listener/app/ALB/a01a96975db52e4c/da37ef7038b92df3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:952790931786:targetgroup/ALB-TG/19ec0d7724be3cbd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:952790931786:listener/app/ALB/a01a96975db52e4c/da37ef7038b92df3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:952790931786:loadbalancer/app/ALB/a01a96975db52e4c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952790931786:targetgroup/ALB-TG/19ec0d7724be3cbd",
            "arn_suffix": "targetgroup/ALB-TG/19ec0d7724be3cbd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:952790931786:targetgroup/ALB-TG/19ec0d7724be3cbd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0beef020bfacf3ec7",
            "owner_id": "952790931786",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Terraform private"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0820d25101d4e1674",
            "owner_id": "952790931786",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ac7b9c093e4a32d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform public"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39b846f436827e5",
            "route_table_id": "rtb-0beef020bfacf3ec7",
            "subnet_id": "subnet-0096802e82f6f5142"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0045de2a3ce9033fc",
            "route_table_id": "rtb-0beef020bfacf3ec7",
            "subnet_id": "subnet-0ae1ef9f266c79879"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00855e673106b9919",
            "route_table_id": "rtb-0820d25101d4e1674",
            "subnet_id": "subnet-0da48ac49bae5f0c6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003cb955172d15a21",
            "route_table_id": "rtb-0820d25101d4e1674",
            "subnet_id": "subnet-0acfcbaafadac550f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:security-group/sg-0fb36f79db7a3a52d",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb36f79db7a3a52d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "952790931786",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load Balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:security-group/sg-0f991fda5fad8472f",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f991fda5fad8472f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb36f79db7a3a52d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "952790931786",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Auto Scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:security-group/sg-0b4213ffd2d2d9236",
            "description": "Allow incoming database connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b4213ffd2d2d9236",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba04adf9ced60144"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "952790931786",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:security-group/sg-0ba04adf9ced60144",
            "description": "Allow public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.6.0/23"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0ba04adf9ced60144",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "952790931786",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:subnet/subnet-0096802e82f6f5142",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.6.0/23",
            "id": "subnet-0096802e82f6f5142",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952790931786",
            "tags": {
              "Name": "Private 1a"
            },
            "tags_all": {
              "Name": "Private 1a"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:subnet/subnet-0ae1ef9f266c79879",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/23",
            "id": "subnet-0ae1ef9f266c79879",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952790931786",
            "tags": {
              "Name": "Private 1b"
            },
            "tags_all": {
              "Name": "Private 1b"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:subnet/subnet-0da48ac49bae5f0c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0da48ac49bae5f0c6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952790931786",
            "tags": {
              "Name": "Public 1a"
            },
            "tags_all": {
              "Name": "Public 1a"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:subnet/subnet-0acfcbaafadac550f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0acfcbaafadac550f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952790931786",
            "tags": {
              "Name": "Public 1b"
            },
            "tags_all": {
              "Name": "Public 1b"
            },
            "vpc_id": "vpc-039b1b5cf7ff52fbe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952790931786:vpc/vpc-039b1b5cf7ff52fbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e970ef0f3a1694e6",
            "default_route_table_id": "rtb-0aa12fbe9ed8db790",
            "default_security_group_id": "sg-0feca211af274e2a4",
            "dhcp_options_id": "dopt-f5bcdc8f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-039b1b5cf7ff52fbe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aa12fbe9ed8db790",
            "owner_id": "952790931786",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}